# rtx-kg2-gateway

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: pre-commit-checks.yaml
src/kuzu_utils/: __init__.py  compute.py  kz_copy.py  kz_create.py
src/notebooks/: ingest_loop_for_segfaults.sh  rtx-kg2-sample-and-schema-generation.py  rtx_kg2_example_cypher_kuzu.ipynb  rtx_kg2_example_cypher_kuzu.py  rtx_kg2_full_json_to_parquet.ipynb  rtx_kg2_full_json_to_parquet.py  rtx_kg2_full_parquet_to_kuzu.ipynb  rtx_kg2_full_parquet_to_kuzu.py  rtx_kg2_functions.ipynb  rtx_kg2_functions.py  rtx_kg2_metanames_parquet_for_kuzu.ipynb  rtx_kg2_metanames_parquet_for_kuzu.py  rtx_kg2_metanames_parquet_to_kuzu.ipynb  rtx_kg2_metanames_parquet_to_kuzu.py  rtx_kg2_metanames_parquet_to_kuzu_copy_data_to_tables.ipynb  rtx_kg2_metanames_parquet_to_kuzu_copy_data_to_tables.py  rtx_kg2_metanames_parquet_to_kuzu_create_tables.ipynb  rtx_kg2_metanames_parquet_to_kuzu_create_tables.py  rtx_kg2_sample_and_schema_generation.ipynb  rtx_kg2_sample_and_schema_generation.py  rtx_kg2_sample_json_to_parquet.ipynb  rtx_kg2_sample_json_to_parquet.py  rtx_kg2_sample_parquet_to_kuzu.ipynb  rtx_kg2_sample_parquet_to_kuzu.py
src/notebooks/data/: kg2c_lite_2.8.4.sample.json  kg2c_lite_2.8.4.sample.schema.json
src/notebooks/data/kg2c_lite_2.8.4.full.dataset.parquet/edges/: edges.61.parquet  edges.62.parquet  edges.63.parquet  edges.64.parquet  edges.65.parquet  edges.66.parquet  edges.67.parquet  edges.68.parquet  edges.69.parquet  edges.70.parquet  edges.71.parquet  edges.72.parquet  edges.73.parquet  edges.74.parquet  edges.75.parquet  edges.76.parquet  edges.77.parquet  edges.78.parquet  edges.79.parquet  edges.80.parquet  edges.81.parquet  edges.82.parquet  edges.83.parquet  edges.84.parquet  edges.87.parquet  edges.88.parquet  edges.89.parquet  edges.90.parquet
src/notebooks/data/kg2c_lite_2.8.4.full.with-metanames.dataset.parquet/edges/actively_involved_in/: actively_involved_in.0.parquet
src/notebooks/data/kg2c_lite_2.8.4.full.with-metanames.dataset.parquet/edges/affects/: affects.9.parquet
src/notebooks/data/kg2c_lite_2.8.4.full.with-metanames.dataset.parquet/edges/associated_with/: associated_with.0.parquet
src/notebooks/data/kg2c_lite_2.8.4.full.with-metanames.dataset.parquet/edges/biomarker_for/: biomarker_for.0.parquet
src/notebooks/data/kg2c_lite_2.8.4.full.with-metanames.dataset.parquet/edges/capable_of/: capable_of.0.parquet
src/notebooks/data/kg2c_lite_2.8.4.full.with-metanames.dataset.parquet/edges/catalyzes/: catalyzes.0.parquet
src/notebooks/data/kg2c_lite_2.8.4.full.with-metanames.dataset.parquet/edges/causes/: causes.2.parquet
src/notebooks/data/kg2c_lite_2.8.4.full.with-metanames.dataset.parquet/edges/chemically_similar_to/: chemically_similar_to.0.parquet
src/notebooks/data/kg2c_lite_2.8.4.full.with-metanames.dataset.parquet/edges/close_match/: close_match.2.parquet
src/notebooks/data/kg2c_lite_2.8.4.full.with-metanames.dataset.parquet/edges/colocalizes_with/: colocalizes_with.0.parquet
src/notebooks/data/kg2c_lite_2.8.4.full.with-metanames.dataset.parquet/edges/composed_primarily_of/: composed_primarily_of.0.parquet
src/notebooks/data/kg2c_lite_2.8.4.full.with-metanames.dataset.parquet/edges/contraindicated_for/: contraindicated_for.0.parquet
src/notebooks/data/kg2c_lite_2.8.4.full.with-metanames.dataset.parquet/edges/contributes_to/: contributes_to.0.parquet
src/notebooks/data/kg2c_lite_2.8.4.full.with-metanames.dataset.parquet/edges/correlated_with/: correlated_with.0.parquet
src/notebooks/data/kg2c_lite_2.8.4.full.with-metanames.dataset.parquet/edges/derives_from/: derives_from.0.parquet
src/notebooks/data/kg2c_lite_2.8.4.full.with-metanames.dataset.parquet/edges/develops_from/: develops_from.0.parquet
src/notebooks/data/kg2c_lite_2.8.4.full.with-metanames.dataset.parquet/edges/diagnoses/: diagnoses.0.parquet
src/notebooks/data/kg2c_lite_2.8.4.full.with-metanames.dataset.parquet/edges/directly_physically_interacts_with/: directly_physically_interacts_with.0.parquet
src/notebooks/data/kg2c_lite_2.8.4.full.with-metanames.dataset.parquet/edges/disease_has_basis_in/: disease_has_basis_in.0.parquet
src/notebooks/data/kg2c_lite_2.8.4.full.with-metanames.dataset.parquet/edges/disrupts/: disrupts.1.parquet
src/rtx_kg2_to_kuzu/: __init__.py  run.py
(+123 files in other folders)
