[tool.poetry]
name = "rtx-kg2-gateway"
version = "0.0.1"
description = "Enabling RTX-KG2 data access through various means."
authors = ["CU DBMI community"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [{include = "notebooks", from="src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
poetry = "^1.7.1"
ijson = "^3.2.3"
genson = "^1.2.2"
requests = "^2.31.0"
awkward = "^2.6.0"
pyarrow = "^15.0.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.0"
black = "^24.0.1"
jupyterlab-code-formatter = "^2.2.1"
jupytext = "^1.16.0"
jupyterlab = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.jupytext]
formats = "ipynb,py:light"

[tool.vulture]
min_confidence = 80
paths = ["src/notebooks"]
sort_by_size = true
verbose = true

[tool.isort]
profile = "black"

[tool.setuptools_scm]
